--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider data-plugin-options="{'sliderLayout': 'fullscreen', 'delay': 9000, 'gridwidth': 1140, 'gridheight': 800, 'responsiveLevels': [4096,1200,992,500], 'parallax': { 'type': 'scroll', 'origo': 'slidercenter', 'speed': 500, 'levels': [2,3,4,5,6,7,8,9,15,50], 'disable_onmobile': 'on' }, 'navigation' : {'arrows': { 'enable': true, 'style': 'arrows-style-1' }}}">
 		<ul>
 			<li class="slide-overlay slide-overlay-level-8" data-transition="fade">
-				<img src="img/slides/slide-1.jpg"  
+				<img src="img/slides/slide-1.webp"  
 					alt=""
 					data-bgposition="center center" 
 					data-bgfit="cover" 
@@ -79,7 +79,7 @@
 					data-x="center"
 					data-y="center"
 					data-fontsize="['62','62','62','100']"
-					data-lineheight="['65','65','65','105']">Roll N Tea</h1>
+					data-lineheight="['65','65','65','105']">Roll N Tea | Best Sushi and Bubble Tea in Richmond Hill</h1>
 
 				<h1 class="tp-caption font-weight-bold text-color-light"
 					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"}]'
@@ -102,7 +102,7 @@
 					data-x="center"
 					data-y="center"
 					data-fontsize="['62','62','62','100']"
-					data-lineheight="['65','65','65','105']">Roll N Tea Richmond Hill</h2>
+					data-lineheight="['65','65','65','105']">Roll N Tea | Best Sushi and Bubble Tea in Richmond Hill</h2>
 
 				<!-- GLORIAFOOD BUTTON -->
 				<a class="tp-caption btn btn-primary btn-outline font-weight-bold border-width-3 text-color-light"
@@ -121,60 +121,6 @@
 					data-lineheight="['18','18','18','55']">ORDER NOW</a>
 					
 			</li>
-			<!--li class="slide-overlay slide-overlay-level-8" data-transition="fade">
-				<img src="img/slides/slide-2.jpg"  
-					alt=""
-					data-bgposition="center center" 
-					data-bgfit="cover" 
-					data-bgrepeat="no-repeat" 
-					class="rev-slidebg"
-					data-bgparallax="8">
-
-				<div class="tp-caption text-color-primary"
-					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1000,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
-					data-x="center"
-					data-y="center" data-voffset="['-48','-48','-48','-90']"
-					data-fontsize="['20','20','20','50']"
-					data-lineheight="['25','25','25','60']">THE BEST SUSHI AND</div>
-
-				<h2 class="tp-caption font-weight-bold text-color-light"
-					style="display:none;"
-					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
-					data-x="center"
-					data-y="center"
-					data-fontsize="['62','62','62','100']"
-					data-lineheight="['65','65','65','105']">Richmond Hill</h2>
-
-				<h2 class="tp-caption font-weight-bold text-color-light"
-					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"},{"delay":"wait","speed":1000,"to":"o:0;","ease":"Power2.easeInOut"}]'
-					data-x="center"
-					data-y="center"
-					data-fontsize="['62','62','62','100']"
-					data-lineheight="['65','65','65','105']">BUBBLE TEA</h2>
-
-				<div class="tp-caption text-color-light font-weight-light"
-					data-frames='[{"from":"opacity:0;","speed":300,"to":"o:1;","delay":2300,"split":"chars","splitdelay":0.05,"ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
-					data-x="center"
-					data-y="center" data-voffset="['53','53','53','100']"
-					data-fontsize="['17','17','17','50']"
-					data-lineheight="['22','22','22','60']">in Richmond Hill.</div>
-
-				<a class="tp-caption btn btn-primary btn-outline font-weight-bold border-width-3 text-color-light"
-					data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" 
-					data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" 
-					data-hash
-					data-hash-offset="92"
-					data-frames='[{"delay":2800,"speed":2000,"frame":"0","from":"y:50%;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
-					data-x="center"
-					data-y="center" data-voffset="['130','130','130','280']"
-					data-paddingtop="['18','18','18','30']"
-					data-paddingbottom="['18','18','18','30']"
-					data-paddingleft="['40','40','40','80']"
-					data-paddingright="['40','40','40','80']"
-					data-fontsize="['13','13','13','45']"
-					data-lineheight="['18','18','18','55']">ORDER NOW</a>
-
-			</li-->
 		</ul>
 	</div>
 </div>
@@ -270,23 +216,6 @@
 										</p>
 									</div>
 
-									<!--div class="collapse" id="aboutViewMore">
-										
-										<div class="row py-4">
-											<div class="col-6">
-												<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-8.jpg" data-plugin-options="{'type':'image'}">
-													<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-8.jpg" alt="Project Image">
-												</a>
-											</div>
-											<div class="col-6">
-												<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-9.jpg" data-plugin-options="{'type':'image'}">
-													<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-9.jpg" alt="Project Image">
-												</a>
-											</div>
-										</div>
-
-									</div>-->
-
 									<br>
 									<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
 										<ul class="social-icons social-icons-dark-2 social-icons-big">
@@ -299,13 +228,13 @@
 								</div>
 							</div>
 							<div class="col-md-6">
-								<img data-src="img/others/others-1.jpg" class="img-fluid rounded appear-animation lazyload" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="700" alt="" />
+								<img data-src="img/about/about-1.webp" class="img-fluid rounded appear-animation lazyload" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="700" alt="" />
 							</div>
 						</div>
 					</div>
 				</section>
 
-				<section class="section section-parallax section-height-4 overlay overlay-show border-0 m-0 appear-animation" data-appear-animation="fadeIn" data-plugin-parallax data-plugin-options="{'speed': 1.5, 'parallaxHeight': '135%'}" data-image-src="img/backgrounds/background-1.jpg" id="order">
+				<section class="section section-parallax section-height-4 overlay overlay-show border-0 m-0 appear-animation" data-appear-animation="fadeIn" data-plugin-parallax data-plugin-options="{'speed': 1.5, 'parallaxHeight': '135%'}" data-image-src="img/backgrounds/background-1.webp" id="order">
 					<div class="container container">
 						<div class="row align-items-center">
 							<div class="col-md-6 custom-column-bg text-center py-5 mb-5 mb-md-0 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200">
@@ -337,7 +266,7 @@
 					</div>
 				</section>
 
-				<section class="section section-height-4 parallax border-0 m-0" data-plugin-parallax data-plugin-options="{'speed': 1.5, 'parallaxHeight': '100%'}" data-image-src="img/backgrounds/background-2.jpg" id="menu">
+				<section class="section section-height-4 parallax border-0 m-0" data-plugin-parallax data-plugin-options="{'speed': 1.5, 'parallaxHeight': '100%'}" data-image-src="img/backgrounds/background-2.webp" id="menu">
 					<div class="container">
 						<div class="row justify-content-center mb-5">
 							<div class="col-md-9 col-lg-6 text-center">
@@ -610,54 +539,14 @@
 								</div>
 							</div>
 						</div>
-						<!--div class="row">
-							<div class="col text-center">
-								<a href="img/menu/menu_rolls.jpg" data-hash data-hash-offset="92" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation img-thumbnail-no-borders img-thumbnail-hover-icon lightbox" data-appear-animation="fadeInUpShorter" data-plugin-options="{'type':'image'}">VIEW FULL MENU</a>
-							</div>
-						</div-->
 					</div>
 				</section>
-
-				<!--div class="container-fluid px-0">
-					<div class="row">
-						<div class="col-6 col-sm-4 col-lg-2 px-0">
-							<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-2.jpg" data-plugin-options="{'type':'image'}">
-								<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-2.jpg" alt="Project Image">
-							</a>
-						</div>
-						<div class="col-6 col-sm-4 col-lg-2 px-0">
-							<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-3.jpg" data-plugin-options="{'type':'image'}">
-								<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-3.jpg" alt="Project Image">
-							</a>
-						</div>
-						<div class="col-6 col-sm-4 col-lg-2 px-0">
-							<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-4.jpg" data-plugin-options="{'type':'image'}">
-								<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-4.jpg" alt="Project Image">
-							</a>
-						</div>
-						<div class="col-6 col-sm-4 col-lg-2 px-0">
-							<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-5.jpg" data-plugin-options="{'type':'image'}">
-								<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-5.jpg" alt="Project Image">
-							</a>
-						</div>
-						<div class="col-6 col-sm-4 col-lg-2 px-0">
-							<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-6.jpg" data-plugin-options="{'type':'image'}">
-								<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-6.jpg" alt="Project Image">
-							</a>
-						</div>
-						<div class="col-6 col-sm-4 col-lg-2 px-0">
-							<a class="img-thumbnail img-thumbnail-no-borders d-block img-thumbnail-hover-icon lightbox" href="img/others/others-7.jpg" data-plugin-options="{'type':'image'}">
-								<img class="img-fluid rounded-0 lazyload" data-src="img/others/others-7.jpg" alt="Project Image">
-							</a>
-						</div>
-					</div>
-				</div-->
 
 				<div class="slider-container rev_slider_wrapper" style="height: 100vh;" id="gallery">
 					<div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider data-plugin-options="{'sliderLayout': 'fullscreen', 'delay': 4000, 'gridwidth': 1140, 'gridheight': 800, 'responsiveLevels': [4096,1200,992,500], 'parallax': { 'type': 'scroll', 'origo': 'slidercenter', 'speed': 500, 'levels': [2,3,4,5,6,7,8,9,15,50], 'disable_onmobile': 'on' }, 'navigation' : {'arrows': { 'enable': true, 'style': 'arrows-style-1' }}}">
 						<ul>
 							<li class="slide-overlay slide-overlay-level-3" data-transition="fade">
-								<img src="img/slides/slide-1.jpg"
+								<img src="img/slides/slide-1.webp"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
@@ -685,7 +574,7 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img src="img/slides/slide-2.jpg"
+								<img src="img/slides/slide-2.webp"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
@@ -713,7 +602,7 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img src="img/slides/slide-3.jpg"
+								<img src="img/slides/slide-3.webp"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
@@ -741,7 +630,7 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img src="img/slides/slide-4.jpg"
+								<img src="img/slides/slide-4.webp"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
@@ -769,7 +658,7 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img src="img/slides/slide-5.jpg"
+								<img src="img/slides/slide-5.webp"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
@@ -797,7 +686,7 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img src="img/slides/slide-6.jpg"
+								<img src="img/slides/slide-6.webp"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
@@ -825,7 +714,7 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img src="img/slides/slide-7.jpg"
+								<img src="img/slides/slide-7.webp"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
@@ -853,7 +742,7 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img src="img/slides/slide-8.jpg"
+								<img src="img/slides/slide-8.webp"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
@@ -881,7 +770,7 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img src="img/slides/slide-9.jpg"
+								<img src="img/slides/slide-9.webp"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
@@ -909,7 +798,7 @@
 							</li>
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
-								<img src="img/slides/slide-10.jpg"
+								<img src="img/slides/slide-10.webp"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
