--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 											we are home to a beautiful palette of Japanese and Korean foods to satisfy your cravings. 
 											On top of that, we serve some of the best bubble tea in all of Richmond Hill.
 											<br><br>
-											Check us out on our other platforms by clicking the links below! We are available on Yelp, Instagram and UberEats.
+											Check us out on our other platforms! We are available on Yelp, Instagram and UberEats at the click of a button below.
 										</p>
 									</div>
 
