--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<title>Roll N Tea | Sushi & Bubble Tea in Richmond Hill</title>	
 
 		<meta name="keywords" content="Bubble tea,Tea,Sushi,Roll N Tea,Roll,Bingsu" />
-		<meta name="description" content="Welcome to Roll N Tea! At Roll N Tea, we serve a delightful fusion of Korean and Japanese cuisine. Come taste the best sushi rolls and bubble tea in Richmond Hill, at incredibly affordable prices! Online ordering available with pickup at the counter.">
+		<meta name="description" content="Welcome to Roll N Tea! At Roll N Tea, we serve some of the best sushi rolls and bubble tea in Richmond Hill, at incredibly affordable prices! Online ordering available with pickup at the counter.">
 		<meta name="author" content="Matthew Ao">
 
 		<!-- Favicon -->
