--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
 									</div>
 									<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
 										Phone us at <a href="tel:905-787-0396">(905) 787-0396</a> during store <a href="#order">hours</a>. 
-										For detailed questions or business inquiries, fill in the form below.
+										For detailed questions or business inquiries, please fill in the form below.
 									</p>
 								</div>
 							</div>
