--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 ﻿<!DOCTYPE html>
-<html data-style-switcher-options="{'changeLogo': false, 'colorPrimary': '#8AC447', 'colorSecondary': '#e36159', 'colorTertiary': '#2baab1', 'colorQuaternary': '#383f48'}">
+<html data-style-switcher-options="{'changeLogo': false, 'colorPrimary': '#8AC447', 'colorSecondary': '#e36159', 'colorTertiary': '#2baab1', 'colorQuaternary': '#383f48'}" lang="en">
 	
 <head>
 
 		<!-- Basic -->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
+		
 
 		<title>Roll N Tea | Sushi & Bubble Tea in Richmond Hill</title>	
 
