--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@
 					data-x="center"
 					data-y="center" data-voffset="['53','53','53','100']"
 					data-fontsize="['17','17','17','50']"
-					data-lineheight="['22','22','22','60']">Best sushi & bubble tea in Richmond Hill.</div>
+					data-lineheight="['22','22','22','60']">Best sushi & bubble tea in Richmond Hill.
+				<br><b>NOTE: We are temporarily closed due to COVID-19.</b></div>
 
 				<!-- hidden h2 -->
 				<h2 class="tp-caption font-weight-bold text-color-light"
