--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 					data-x="center"
 					data-y="center" data-voffset="['53','53','53','100']"
 					data-fontsize="['17','17','17','50']"
-					data-lineheight="['22','22','22','60']">NOTE: Temporarily closed due to COVID-19./div>
+					data-lineheight="['22','22','22','60']">NOTE: Temporarily closed due to COVID-19.</div>
 
 				<!-- hidden h2 -->
 				<h2 class="tp-caption font-weight-bold text-color-light"
