--- a/index.html
+++ b/index.html
@@ -524,12 +524,14 @@
 								</div>
 								<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
 									<p class="font-weight-light text-color-light text-3 opacity-7 px-4"><b>NOTE: We are temporarily closed due to COVID-19. We are planning to re-open in July.</b></p>
+									<!--
 									<p class="font-weight-light text-color-light text-3 opacity-7 px-4">Don't want to wait in line? Order through our online menu to save time. Pickup and pay <b>at the counter.</b></p>
+									-->
 								</div>
 
-								<!-- GLORIAFOOD BUTTON -->
+								<!-- GLORIAFOOD BUTTON --
 								<a data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" class="btn btn-primary btn-outline font-weight-bold border-width-3 btn-px-5 py-3 appear-animation img-thumbnail-no-borders img-thumbnail-hover-icon lightbox" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="650">CLICK TO ORDER</a>
-								
+								-->
 							</div>
 							<div class="col-md-6 text-center">
 								<div class="row justify-content-center">
