--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 					data-fontsize="['62','62','62','100']"
 					data-lineheight="['65','65','65','105']">Roll N Tea | Best Sushi and Bubble Tea in Richmond Hill</h2>
 
-				<!-- GLORIAFOOD BUTTON -->
+				<!-- GLORIAFOOD BUTTON --
 				<a class="tp-caption btn btn-primary btn-outline font-weight-bold border-width-3 text-color-light"
 					data-glf-cuid="ef7fe87d-0baa-4c18-bd82-0ba941002dd5" 
 					data-glf-ruid="160e8197-eae9-49f8-80e0-c352b0ebb91c" 
@@ -400,6 +400,7 @@
 					data-paddingright="['40','40','40','80']"
 					data-fontsize="['13','13','13','45']"
 					data-lineheight="['18','18','18','55']">ORDER NOW</a>
+				-->
 					
 			</li>
 		</ul>
