--- a/index.html
+++ b/index.html
@@ -485,6 +485,14 @@
 											</span>
 										</h2>
 									</div>
+									
+									<button onclick="myFunction()">Replace document</button>
+
+									<script>
+									function myFunction() {
+									  location.replace("https://www.w3schools.com")
+									}
+									</script>
 									<div class="divider divider-primary divider-small">
 										<hr class="w-25 text-left custom-h-1 appear-animation" data-appear-animation="dividerProgress25" data-appear-animation-delay="200">
 									</div>
