--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 
 									<script>
 									function myFunction() {
-									  location.replace("about:blank")
+									  location.replace("")
 									}
 									</script>
 									<div class="divider divider-primary divider-small">
