update order now to hours

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 											<a class="dropdown-item" data-hash data-hash-offset="92" href="#about">About</a>
 										</li>
 										<li class="dropdown order-2">
-											<a class="dropdown-item" data-hash data-hash-offset="92" href="#order">Order Now</a>
+											<a class="dropdown-item" data-hash data-hash-offset="92" href="#order">Hours</a>
 										</li>
 										<li class="dropdown order-3">
 											<a class="dropdown-item" data-hash data-hash-offset="92" href="#menu">Menu</a>
@@ -522,10 +522,10 @@
 						<div class="row align-items-center">
 							<div class="col-md-6 custom-column-bg text-center py-5 mb-5 mb-md-0 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200">
 								<div class="overflow-hidden mb-3">
-									<h2 class="text-color-light font-weight-semibold text-9 negative-ls-1 mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="400">Order Now</h2>
+									<h2 class="text-color-light font-weight-semibold text-9 negative-ls-1 mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="400">Store Hours</h2>
 								</div>
 								<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
-									<p class="font-weight-light text-color-light text-3 opacity-7 px-4"><b>NOTE: We are temporarily closed due to COVID-19.</b></p>
+									<p class="font-weight-light text-color-light text-3 opacity-7 px-4"><b>10066 Bayview Ave #8, Richmond Hill, ON L4C 0W5</b></p>
 									<!--
 									<p class="font-weight-light text-color-light text-3 opacity-7 px-4">Don't want to wait in line? Order through our online menu to save time. Pickup and pay <b>at the counter.</b></p>
 									-->
