--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 	<div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider data-plugin-options="{'sliderLayout': 'fullscreen', 'delay': 9000, 'gridwidth': 1140, 'gridheight': 800, 'responsiveLevels': [4096,1200,992,500], 'parallax': { 'type': 'scroll', 'origo': 'slidercenter', 'speed': 500, 'levels': [2,3,4,5,6,7,8,9,15,50], 'disable_onmobile': 'on' }, 'navigation' : {'arrows': { 'enable': true, 'style': 'arrows-style-1' }}}">
 		<ul>
 			<li class="slide-overlay slide-overlay-level-8" data-transition="fade">
-				<img src="img/slides/slide-1.webp"  
+				<img src="img/slides/slide-2.webp"  
 					alt=""
 					data-bgposition="center center" 
 					data-bgfit="cover" 
@@ -860,8 +860,8 @@
 				<div class="slider-container rev_slider_wrapper" style="height: 100vh;" id="gallery">
 					<div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider data-plugin-options="{'sliderLayout': 'fullscreen', 'delay': 4000, 'gridwidth': 1140, 'gridheight': 800, 'responsiveLevels': [4096,1200,992,500], 'parallax': { 'type': 'scroll', 'origo': 'slidercenter', 'speed': 500, 'levels': [2,3,4,5,6,7,8,9,15,50], 'disable_onmobile': 'on' }, 'navigation' : {'arrows': { 'enable': true, 'style': 'arrows-style-1' }}}">
 						<ul>
-							<li class="slide-overlay slide-overlay-level-3" data-transition="fade">
-								<img src="img/slides/slide-1.webp"
+							<!--li class="slide-overlay slide-overlay-level-3" data-transition="fade">
+								<img src="img/slides/slide-2.webp"
 									 alt=""
 									 data-bgposition="center center"
 									 data-bgfit="cover"
@@ -886,7 +886,7 @@
 									data-lineheight="['65','65','65','105']">
 									DYNAMITE ROLL
 								</h2>
-							</li>
+							</!--li-->
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
 								<img src="img/slides/slide-2.webp"
@@ -916,7 +916,7 @@
 								</h2>
 							</li>
 
-							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
+							<!--li class="slide-overlay slide-overlay-level-2" data-transition="fade">
 								<img src="img/slides/slide-3.webp"
 									 alt=""
 									 data-bgposition="center center"
@@ -942,9 +942,9 @@
 									data-lineheight="['65','65','65','105']">
 									BLACK DRAGON ROLL
 								</h2>
-							</li>
+							</!--li-->
 
-							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
+							<!--li class="slide-overlay slide-overlay-level-2" data-transition="fade">
 								<img src="img/slides/slide-4.webp"
 									 alt=""
 									 data-bgposition="center center"
@@ -970,9 +970,9 @@
 									data-lineheight="['65','65','65','105']">
 									GREEN DRAGON ROLL
 								</h2>
-							</li>
+							</!--li-->
 
-							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
+							<!--li class="slide-overlay slide-overlay-level-2" data-transition="fade">
 								<img src="img/slides/slide-5.webp"
 									 alt=""
 									 data-bgposition="center center"
@@ -998,9 +998,9 @@
 									data-lineheight="['65','65','65','105']">
 									MOUNTAIN ROLL
 								</h2>
-							</li>
+							</!--li-->
 
-							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
+							<!--li class="slide-overlay slide-overlay-level-2" data-transition="fade">
 								<img src="img/slides/slide-6.webp"
 									 alt=""
 									 data-bgposition="center center"
@@ -1026,9 +1026,9 @@
 									data-lineheight="['65','65','65','105']">
 									PHILADELPHIA ROLL
 								</h2>
-							</li>
+							</!--li-->
 
-							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
+							<!--li class="slide-overlay slide-overlay-level-2" data-transition="fade">
 								<img src="img/slides/slide-7.webp"
 									 alt=""
 									 data-bgposition="center center"
@@ -1054,7 +1054,7 @@
 									data-lineheight="['65','65','65','105']">
 									RED DRAGON ROLL
 								</h2>
-							</li>
+							</!--li-->
 
 							<li class="slide-overlay slide-overlay-level-2" data-transition="fade">
 								<img src="img/slides/slide-8.webp"
