replace sushi with gimbap

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 				"@type" : "PostalAddress",
 				"addressLocality" : "Richmond Hill"
 			},
-			"servesCuisine" : "sushi & bubble tea"
+			"servesCuisine" : "gimbap rolls & bubble tea"
 			}, {
 			"@context" : "http://schema.org",
 			"@type" : "Restaurant",
 			"image" : [ "http://www.googleusercontent.com/img/logo.png", "http://www.googleusercontent.com/img/logo.png" ],
-			"servesCuisine" : "sushi rolls"
+			"servesCuisine" : "gimbap rolls"
 			}, {
 			"@context" : "http://schema.org",
 			"@type" : "Restaurant",
@@ -92,7 +92,7 @@
 			}, {
 			"@context" : "http://schema.org",
 			"@type" : "Restaurant",
-			"servesCuisine" : "handcrafted sushi rolls"
+			"servesCuisine" : "handcrafted gimbap rolls"
 			}, {
 			"@context" : "http://schema.org",
 			"@type" : "Restaurant",
@@ -360,7 +360,7 @@
 					data-x="center"
 					data-y="center"
 					data-fontsize="['62','62','62','100']"
-					data-lineheight="['65','65','65','105']">Roll N Tea | Best Sushi and Bubble Tea in Richmond Hill</h1>
+					data-lineheight="['65','65','65','105']">Roll N Tea | Best Gimbap and Bubble Tea in Richmond Hill</h1>
 
 				<h1 class="tp-caption font-weight-bold text-color-light"
 					data-frames='[{"from":"opacity:1;y:[100%];","speed":2000,"to":"opacity:1;","delay":1500,"ease":"Power3.easeInOut","mask":"x:0px;y:0;s:inherit;e:inherit;"}]'
@@ -374,7 +374,7 @@
 					data-x="center"
 					data-y="center" data-voffset="['53','53','53','100']"
 					data-fontsize="['17','17','17','50']"
-					data-lineheight="['22','22','22','60']"><b>Best bubble tea and sushi in Richmond Hill.</b></div>
+					data-lineheight="['22','22','22','60']"><b>Best bubble tea and gimbap rolls in Richmond Hill.</b></div>
 
 				<!-- hidden h2 -->
 				<h2 class="tp-caption font-weight-bold text-color-light"
@@ -383,7 +383,7 @@
 					data-x="center"
 					data-y="center"
 					data-fontsize="['62','62','62','100']"
-					data-lineheight="['65','65','65','105']">Roll N Tea | Best Sushi and Bubble Tea in Richmond Hill</h2>
+					data-lineheight="['65','65','65','105']">Roll N Tea | Best Gimbap and Bubble Tea in Richmond Hill</h2>
 
 				<!-- GLORIAFOOD BUTTON --
 				<a class="tp-caption btn btn-primary btn-outline font-weight-bold border-width-3 text-color-light"
